--- a/frontend/src/styles/scss/boardPage.scss
+++ b/frontend/src/styles/scss/boardPage.scss
@@ -199,6 +199,10 @@
       justify-content: space-between;
       margin-top: 10px;
       font-size: 0.7rem;
+      .flex-row {
+        display: flex;
+        flex-direction: row;
+      }
     }
   }
   .detail_content {
