--- a/frontend/src/styles/scss/carousel.scss
+++ b/frontend/src/styles/scss/carousel.scss
@@ -64,8 +64,8 @@
 
     img {
       flex-shrink: 0;
-      min-width: 100%;
-      min-height: 100%;
+      min-width: 300px;
+      min-height: 300px;
     }
   }
 
