--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -381,6 +381,10 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
               justify-content: space-evenly;
               align-items: center;
 
+              &::-webkit-scrollbar {
+                display: none;
+              }
+
               .item {
                 transition: all 200ms ease-in-out;
                 &:hover {
@@ -406,6 +410,96 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                   margin: 0 5px 5px 5px;
                   cursor: pointer;
                   transition: all 200ms ease-in-out;
+                }
+              }
+            }
+
+            .proc3-2 {
+              height: calc(100% - 20px);
+              width: 100%;
+              display: flex;
+              justify-content: space-evenly;
+              align-items: center;
+
+              &::-webkit-scrollbar {
+                display: none;
+              }
+
+              .item {
+                transition: all 200ms ease-in-out;
+                &:hover {
+                  background-color: rgba(128, 128, 128, 0.25);
+                }
+                &-top {
+                  height: 150px;
+                  width: 280px;
+                  background-size: cover;
+                  background-repeat: no-repeat;
+                  background-position: center;
+                  margin: 5px 5px 0 5px;
+                  transition: all 200ms ease-in-out;
+                  cursor: pointer;
+                }
+
+                &-bot {
+                  height: 60px;
+                  width: 280px;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  margin: 0 5px 5px 5px;
+                  cursor: pointer;
+                  transition: all 200ms ease-in-out;
+                }
+              }
+            }
+
+            .proc3-3 {
+              height: calc(100% - 20px);
+              width: 100%;
+              display: flex;
+              flex-wrap: wrap;
+              justify-content: space-evenly;
+              overflow-y: scroll;
+
+              &::-webkit-scrollbar {
+                display: none;
+              }
+
+              .item {
+                transition: all 200ms ease-in-out;
+                &:hover {
+                  background-color: rgba(128, 128, 128, 0.25);
+                }
+                &-top {
+                  height: 150px;
+                  width: 280px;
+                  background-size: cover;
+                  background-repeat: no-repeat;
+                  background-position: center;
+                  margin: 5px 5px 0 5px;
+                  transition: all 200ms ease-in-out;
+                  cursor: pointer;
+                }
+
+                &-bot {
+                  height: 60px;
+                  width: 280px;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  margin: 0 5px 5px 5px;
+                  cursor: pointer;
+                  transition: all 200ms ease-in-out;
+                }
+              }
+
+              .item-active {
+                @extend .item;
+                background-color: rgba(0, 255, 0, 0.25);
+  
+                &:hover {
+                  background-color: rgba(255, 0, 0, 0.25);
                 }
               }
             }
@@ -593,8 +687,8 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
           .cancelBtn {
             cursor: pointer;
             display: inline;
-            height: 30px;
-            width: 30px;
+            height: 25px;
+            width: 25px;
           }
         }
       }
