--- a/frontend/src/styles/scss/comment.scss
+++ b/frontend/src/styles/scss/comment.scss
@@ -28,11 +28,18 @@
   .comment_content {
     display: flex;
     flex-direction: column;
-    font-size: 1.2rem;
     margin: 6px;
+    .comment_id{
+      font-size: 0.8rem;
+      font-weight: 700;
+    }
+    .comment_content{
+      margin: 6px;
+    }
 
     .date {
       font-size: 0.4rem;
+      margin: 6px;
     }
   }
 }
