--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -152,22 +152,6 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             height: 100%;
             width: 100%;
 
-            .back-wrapper {
-              height: 25px;
-
-              .back {
-                cursor: pointer;
-                transition: all 200ms ease-in-out;
-                display: inline-block;
-
-                &:hover {
-                  color: red;
-                  font-size: 22.5px;
-                  font-weight: bolder;
-                }
-              }
-            }
-
             .search-wrapper {
               display: flex;
               justify-content: center;
@@ -497,7 +481,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
               .item-active {
                 @extend .item;
                 background-color: rgba(0, 255, 0, 0.25);
-  
+
                 &:hover {
                   background-color: rgba(255, 0, 0, 0.25);
                 }
@@ -520,7 +504,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             }
 
             .lower {
-              height: 40%;
+              height: calc(40% - 20px);
               width: 100%;
               display: flex;
               justify-content: center;
@@ -604,7 +588,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             }
             .proc5-bot {
               width: 60%;
-              height: 40%;
+              height: calc(40% - 20px);
               margin: 0 20%;
             }
 
