--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -258,6 +258,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                   justify-content: center;
                   align-items: center;
                   transition: all 150ms ease-in-out;
+                  border-radius: 4px;
                 }
 
                 .btn {
@@ -347,7 +348,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
           }
 
           .proc3 {
-            height: calc(100% - 20px);
+            height: 100%;
             width: 100%;
             display: flex;
             flex-wrap: wrap;
@@ -359,7 +360,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             }
 
             .proc3-1 {
-              height: 100%;
+              height: calc(100% - 20px);
               width: 100%;
               display: flex;
               justify-content: space-evenly;
@@ -401,39 +402,135 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             .proc3-2 {
               height: calc(100% - 20px);
               width: 100%;
-              display: flex;
-              justify-content: space-evenly;
-              align-items: center;
+              overflow-y: scroll;
 
               &::-webkit-scrollbar {
                 display: none;
               }
 
-              .item {
-                transition: all 200ms ease-in-out;
-                &:hover {
-                  background-color: rgba(128, 128, 128, 0.25);
-                }
-                &-top {
-                  height: 150px;
-                  width: 280px;
-                  background-size: cover;
-                  background-repeat: no-repeat;
-                  background-position: center;
-                  margin: 5px 5px 0 5px;
-                  transition: all 200ms ease-in-out;
-                  cursor: pointer;
+              .search-wrapper {
+                display: flex;
+                justify-content: center;
+                .search {
+                  font-size: 40px;
+                  border: 2px solid #{shadow};
+                  outline: none;
+
+                  &:focus {
+                    border: 2px solid #{$mainColor-default};
+                  }
+
+                  &:hover:not(:focus) {
+                    border: 2px solid #{$mainColor-strong};
+                  }
                 }
 
-                &-bot {
-                  height: 60px;
-                  width: 280px;
+                .btn {
+                  height: 48px;
+                  width: 48px;
                   display: flex;
                   justify-content: center;
                   align-items: center;
-                  margin: 0 5px 5px 5px;
                   cursor: pointer;
+                  transition: all 300ms ease-in-out;
+                  border-radius: 5px;
+                  background-color: #{$proc3-btn};
+
+                  &:hover {
+                    background-color: #{$proc3-btn-hover};
+                  }
+                }
+              }
+
+              .item-wrapper {
+                margin-top: 10px;
+                display: flex;
+                height: calc(100% - 70px);
+                width: 100%;
+                flex-wrap: wrap;
+                justify-content: space-evenly; 
+                align-items: flex-start;
+
+                .item {
                   transition: all 200ms ease-in-out;
+                  &:hover {
+                    background-color: rgba(128, 128, 128, 0.25);
+                  }
+                  &-top {
+                    height: 120px;
+                    width: 180px;
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    margin: 2.5px 2.5px 0 2.5px;
+                    transition: all 200ms ease-in-out;
+                    cursor: pointer;
+                  }
+
+                  &-bot {
+                    height: 40px;
+                    width: 180px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 0 2.5px 2.5px 2.5px;
+                    cursor: pointer;
+                    transition: all 200ms ease-in-out;
+                  }
+                }
+
+                .item-active {
+                  @extend .item;
+                  background-color: rgba(0, 255, 0, 0.25);
+
+                  &:hover {
+                    background-color: rgba(255, 0, 0, 0.25);
+                  }
+                }
+              }
+
+              .footer {
+                display: flex;
+                justify-content: center;
+
+                @mixin btn($bgc) {
+                  background-color: $bgc;
+                  font-size: 18px;
+                  margin: 0 2px;
+                  cursor: pointer;
+                  height: 24px;
+                  width: 30px;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  transition: all 150ms ease-in-out;
+                  border-radius: 4px;
+                }
+
+                .btn {
+                  &-default {
+                    @include btn($bgc: white);
+
+                    &:hover {
+                      background-color: rgba(0, 0, 255, 0.5);
+                    }
+                  }
+
+                  &-active {
+                    @include btn($bgc: rgba(255, 255, 0, 0.5));
+
+                    &:hover {
+                      background-color: rgba(0, 0, 255, 0.5);
+                    }
+                  }
+
+                  &-side {
+                    @include btn($bgc: white);
+
+                    &:hover {
+                      background-color: rgba(0, 0, 255, 0.5);
+                    }
+                  }
                 }
               }
             }
@@ -508,6 +605,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
               width: 100%;
               display: flex;
               justify-content: center;
+              
 
               p {
                 font-size: 2.5rem;
