design: board detail button design

--- a/frontend/src/styles/scss/boardPage.scss
+++ b/frontend/src/styles/scss/boardPage.scss
@@ -1,32 +1,42 @@
-.buttons {
-  display: flex;
-  justify-content: flex-end;
-  .button_link {
+.button_container {
+  width: 800px;
+  .buttons {
     display: flex;
-    margin: 3px;
-    padding: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-    width: 100px;
-    height: 35px;
-    background: #fff;
-    border-radius: 0.2rem;
-    border: 1px solid gray;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
-    font-weight: 700;
-    color: black;
-    box-sizing: border-box;
+    justify-content: space-between; 
+  
+    div {
+      display: flex;
+      flex-direction: row;
+    }
+  }
+}
 
-    &:hover {
-      opacity: 90%;
-      background-color: #eee;
-      cursor: pointer;
-    }
-    a {
-      font-size: 1.1rem;
-    }
+
+.button_link {
+  display: flex;
+  margin: 3px;
+  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 100px;
+  height: 35px;
+  background: #fff;
+  border-radius: 0.2rem;
+  border: 1px solid gray;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: 700;
+  color: black;
+  box-sizing: border-box;
+
+  &:hover {
+    opacity: 90%;
+    background-color: #eee;
+    cursor: pointer;
+  }
+  a {
+    font-size: 1.1rem;
   }
 }
 
