--- a/frontend/src/styles/scss/boardPage.scss
+++ b/frontend/src/styles/scss/boardPage.scss
@@ -91,7 +91,7 @@
         display: flex;
         flex-direction: column;
         padding: 10px;
-        margin: 4px;
+        margin: 10px;
         height: 120px;
         list-style-type: none;
         border: 1px solid gray;
@@ -276,16 +276,21 @@
     display: flex;
     flex-direction: column;
     .title {
-      font-size: 1.5rem;
+      width: 800px;
+      height: 20px;
+      margin: 10px;
+      padding: 10px;
+      font-size: 1.2rem;
       font-weight: 700;
     }
     .update_body {
       margin: 10px;
+      margin-bottom: 20px;
       width: 800px;
       height: 400px;
       padding: 10px;
       resize: none;
-      border-radius: 0.2rem;
+      border-radius: 0.2rem;  
     }
     .updated_image {
       display: flex;
