feat : 추천페이지 process1 API 연결, 검색어 관련

--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -227,9 +227,12 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                   }
 
                   .text {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
+                    font-size: 12px;
+                    display: -webkit-box;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
                   }
                 }
 
