feat : 추천페이지 process1 호환성 표시

--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -134,13 +134,31 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                 }
 
                 .card-back {
-                  background-color: #{$mainColor-default};
+                  background-color: #{$mainColor-weak};
                   transform: rotateY(180deg);
                   opacity: 0;
 
                   .detail {
                     height: 100%;
                     width: 100%;
+
+                    .part {
+                      display: flex;
+                      justify-content: center;
+                      font-size: 24px;
+                      font-weight: 600;
+                    }
+
+                    .script {
+                      height: calc(100% - 32px);
+                      width: 100%;
+                      display: flex;
+                      align-items: center;
+
+                      div {
+                        width: 100%;
+                      }
+                    }
                   }
                 }
               }
@@ -242,6 +260,16 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
 
                   &:hover {
                     border: 2px solid rgba(255, 0, 0, 0.5);
+                  }
+                }
+
+                .item-disabled {
+                  @extend .item;
+                  cursor: not-allowed;
+                  filter: opacity(50%);
+
+                  &:hover {
+                    border: 2px solid white;
                   }
                 }
               }
@@ -446,6 +474,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
               }
 
               .item-wrapper {
+                box-sizing: border-box;
                 margin-top: 10px;
                 display: flex;
                 height: calc(100% - 70px);
@@ -746,6 +775,8 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
         height: 100%;
 
         .tab-item {
+          box-sizing: border-box;
+          padding-right: 10px;
           width: 100%;
           height: 20%;
           border-top: 2px dashed #{$mainColor-default};
@@ -763,10 +794,11 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
           }
 
           .wrapper2 {
-            font-weight: 400;
             display: flex;
             justify-content: flex-start;
             align-items: center;
+            font-size: 12px;
+            font-weight: 400;
           }
 
           .cancelBtn {
