--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -242,6 +242,12 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                       background-repeat: no-repeat;
                       background-position: center;
                     }
+
+                    .disabledList {
+                      box-sizing: border-box;
+                      position: fixed;
+                      height: 80%;
+                    }
                   }
 
                   .text {
@@ -480,7 +486,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                 height: calc(100% - 70px);
                 width: 100%;
                 flex-wrap: wrap;
-                justify-content: space-evenly; 
+                justify-content: space-evenly;
                 align-items: flex-start;
 
                 .item {
@@ -637,7 +643,6 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
               width: 100%;
               display: flex;
               justify-content: center;
-              
 
               p {
                 font-size: 2.5rem;
