--- a/frontend/src/styles/scss/quotation.scss
+++ b/frontend/src/styles/scss/quotation.scss
@@ -1,28 +1,53 @@
 .quotation_page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .quotation_header {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    .quotation_header{
-        display: flex;
-        justify-content: flex-start;
-        font-size: 3rem;
-        font-weight: 700;
-        width: 800px;
-        margin: 20px;
-        
+    width: 800px;
+    margin: 20px;
+    .title {
+      font-size: 3rem;
+      font-weight: 700;
     }
-    .quotation_container {
-        display: flex;
-        border: 2px solid black;
-        border-radius: 1rem;
-        width: 800px;
-        height: 400px;
-        margin: 10px;
-        padding: 10px;
+    .create_button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100px;
+      height: 35px;
+      border: 1px solid gray;
+      border-radius: 0.2rem;
+      background-color: #fff;
+      margin: 3px;
+      padding: 5 10px;
+      font-size: 1rem;
+      font-weight: 700;
+      text-decoration: none;
+      color: black;
+      box-sizing: border-box;
+      &:hover {
+        opacity: 90%;
+        background-color: #eee;
+        cursor: pointer;
+      }
+    }
+  }
 
-        .quotation_name {
-            font-size: 1.5rem;
-            font-weight: 700;
-        }
+  .quotation_container {
+    display: flex;
+    border: 2px solid black;
+    border-radius: 1rem;
+    width: 800px;
+    height: 400px;
+    margin: 10px;
+    padding: 10px;
+
+    .quotation_name {
+      font-size: 1.5rem;
+      font-weight: 700;
     }
+  }
 }
