--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -347,7 +347,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
               &-top {
                 height: 150px;
                 width: 280px;
-                background-size: cover;
+                background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center;
                 margin: 5px 5px 0 5px;
