--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -252,11 +252,17 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
 
                   .text {
                     font-size: 12px;
-                    display: -webkit-box;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    -webkit-line-clamp: 2;
-                    -webkit-box-orient: vertical;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    div {
+                      display: -webkit-box;
+                      overflow: hidden;
+                      text-overflow: ellipsis;
+                      -webkit-line-clamp: 2;
+                      -webkit-box-orient: vertical;
+                    }
                   }
                 }
 
@@ -509,12 +515,21 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                   &-bot {
                     height: 40px;
                     width: 180px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
                     margin: 0 2.5px 2.5px 2.5px;
                     cursor: pointer;
                     transition: all 200ms ease-in-out;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    .text {
+                      display: -webkit-box;
+                      overflow: hidden;
+                      text-overflow: ellipsis;
+                      -webkit-line-clamp: 2;
+                      -webkit-box-orient: vertical;
+                      font-size: 14px;
+                    }
                   }
                 }
 
@@ -606,12 +621,21 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                 &-bot {
                   height: 60px;
                   width: 280px;
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
                   margin: 0 5px 5px 5px;
                   cursor: pointer;
                   transition: all 200ms ease-in-out;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+
+                  .text {
+                    display: -webkit-box;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
+                    font-size: 14px;
+                  }
                 }
               }
 
@@ -630,31 +654,45 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             height: 100%;
             width: 100%;
 
-            .upper {
-              height: 40%;
+            .proc4-wrapper {
+              height: calc(80% - 20px);
               width: 100%;
               display: flex;
-              font-size: 2.5rem;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-            }
+              flex-direction: row;
 
-            .lower {
-              height: calc(40% - 20px);
-              width: 100%;
-              display: flex;
-              justify-content: center;
+              &-left {
+                .upper {
+                  height: 50%;
+                  width: 100%;
+                  display: flex;
+                  font-size: 2.5rem;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                }
 
-              p {
-                font-size: 2.5rem;
+                .lower {
+                  height: 50%;
+                  width: 100%;
+                  display: flex;
+                  justify-content: center;
+
+                  p {
+                    font-size: 2.5rem;
+                  }
+
+                  .budget-recom {
+                    font-size: 1.5rem;
+                    color: rgba(128, 128, 128, 0.5);
+                    display: flex;
+                    justify-content: center;
+                  }
+                }
               }
 
-              .budget-recom {
-                font-size: 1.5rem;
-                color: rgba(128, 128, 128, 0.5);
-                display: flex;
-                justify-content: center;
+              &-right {
+                height: calc(80% - 20px);
+                width: 100%;
               }
             }
 
