--- a/frontend/src/styles/scss/quotation.scss
+++ b/frontend/src/styles/scss/quotation.scss
@@ -145,6 +145,11 @@
 
         font-size: 1.2rem;
         font-weight: 700;
+        &:hover{
+          opacity: 90%;
+          cursor: pointer;
+          background-color: #CCC;
+        }
       }
     }
   }
