--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -541,6 +541,14 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                     background-color: rgba(255, 0, 0, 0.25);
                   }
                 }
+
+                .no-data {
+                  height: 100%;
+                  width: 100%;
+                  background-size: auto;
+                  background-repeat: no-repeat;
+                  background-position: center;
+                }
               }
 
               .footer {
@@ -697,6 +705,104 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                 height: 100%;
                 width: 50%;
                 border-left: 1.5px dashed black;
+
+                .title {
+                  font-size: 2.5rem;
+                  display: flex;
+                  justify-content: center;
+                }
+
+                .part-check-wrapper {
+                  width: 100%;
+                  height: calc(100% - 53.33px);
+
+                  .part-check {
+                    box-sizing: border-box;
+                    height: 11%;
+                    width: 100%;
+                    padding: 2px 20px;
+                    display: flex;
+                    justify-content: space-between;
+
+                    .partImg {
+                      height: 100%;
+                      aspect-ratio: 1/1;
+                      background-size: contain;
+                      background-repeat: no-repeat;
+                      background-position: center;
+                    }
+
+                    .text1 {
+                      height: 100%;
+                      width: 40%;
+                      display: flex;
+                      justify-content: center;
+                      align-items: center;
+                    }
+
+                    .text2 {
+                      height: 100%;
+                      width: 40%;
+                      display: flex;
+                      align-items: center;
+
+                      .inner {
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                      }
+                    }
+
+                    .btn {
+                      &-yes {
+                        height: 100%;
+                        aspect-ratio: 1.5/1;
+                        color: white;
+                        background-color: rgba(0, 128, 0, 0.5);
+                        cursor: pointer;
+                        transition: all 200ms ease-in-out;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 4px;
+
+                        &:hover {
+                          background-color: rgba(0, 128, 0, 1);
+                        }
+                      }
+
+                      &-no {
+                        height: 100%;
+                        aspect-ratio: 1.5/1;
+                        color: white;
+                        background-color: rgba(255, 0, 0, 0.5);
+                        cursor: pointer;
+                        transition: all 200ms ease-in-out;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 4px;
+
+                        &:hover {
+                          background-color: rgba(255, 0, 0, 1);
+                        }
+                      }
+
+                      &-disabled {
+                        height: 100%;
+                        aspect-ratio: 1.5/1;
+                        color: white;
+                        background-color: rgba(128, 128, 128, 0.5);
+                        cursor: not-allowed;
+                        transition: all 200ms ease-in-out;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 4px;
+                      }
+                    }
+                  }
+                }
               }
             }
 
