--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -920,9 +920,47 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             }
           }
 
-          .procEnd {
-            .test {
-              color: "red";
+          .proc-end {
+            width: 100%;
+            height: 100%;
+            display: flex;
+
+            .end-left {
+              box-sizing: border-box;
+              height: 100%;
+              width: 50%;
+
+              .title {
+                width: 100%;
+                font-size: 2rem;
+                display: flex;
+                justify-content: center;
+              }
+
+              .inner-wrapper {
+                height: calc(100% - 2rem);
+                display: flex;
+                flex-direction: column;
+              }
+            }
+
+            .end-right {
+              box-sizing: border-box;
+              height: 100%;
+              width: 50%;
+
+              .title {
+                width: 100%;
+                font-size: 2rem;
+                display: flex;
+                justify-content: center;
+              }
+
+              .inner-wrapper {
+                height: calc(100% - 2rem);
+                display: flex;
+                flex-direction: column;
+              }
             }
           }
         }
