--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -976,6 +976,11 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                       background-color: #fff;
                       padding: 2.5px;
                       z-index: 9998;
+
+                      .modal-item {
+                        height: 600px;
+                        width:  500px;
+                      }
                     }
                   }
 
@@ -1059,7 +1064,11 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                       transform: translate(-50%, -50%);
                       background-color: #fff;
                       padding: 2.5px;
-                      z-index: 9998;
+
+                      .modal-item {
+                        height: 100px;
+                        width: 100px;
+                      }
                     }
                   }
 
