--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -41,6 +41,14 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
           width: 100%;
           padding: 5px;
 
+          .cross {
+            transition: 200ms ease-in-out;
+
+            &:hover {
+              background-color: rgba(128, 128, 128, 0.275);
+            }
+          }
+
           // proc1_1
           .proc1_1 {
             height: 100%;
