--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -49,6 +49,47 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             }
           }
 
+          .modal-btn-wrapper {
+            display: flex;
+            height: calc(100% - 84px);
+            width: 100%;
+            flex-direction: column;
+            justify-content: flex-end;
+
+            .printBtn {
+              font-size: 2rem;
+              cursor: pointer;
+              margin: 15px 15px;
+              padding: 5px 0;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              background-color: rgba(255, 0, 0, 0.25);
+              transition: all 200ms ease-in-out;
+              border-radius: 5px;
+
+              &:hover {
+                background-color: rgba(255, 0, 0, 0.5);
+              }
+            }
+
+            .saveBtn {
+              font-size: 2rem;
+              cursor: pointer;
+              margin: 15px 15px;
+              padding: 5px 0;
+              display: flex;
+              justify-content: center;
+              background-color: rgba(0, 128, 0, 0.25);
+              transition: all 200ms ease-in-out;
+              border-radius: 5px;
+
+              &:hover {
+                background-color: rgba(0, 128, 0, 0.5);
+              }
+            }
+          }
+
           // proc1_1
           .proc1_1 {
             height: 100%;
