--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -56,22 +56,22 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             flex-direction: column;
             justify-content: flex-end;
 
-            .printBtn {
-              font-size: 2rem;
-              cursor: pointer;
-              margin: 15px 15px;
-              padding: 5px 0;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              background-color: rgba(255, 0, 0, 0.25);
-              transition: all 200ms ease-in-out;
-              border-radius: 5px;
+            // .printBtn {
+            //   font-size: 2rem;
+            //   cursor: pointer;
+            //   margin: 15px 15px;
+            //   padding: 5px 0;
+            //   display: flex;
+            //   justify-content: center;
+            //   align-items: center;
+            //   background-color: rgba(255, 0, 0, 0.25);
+            //   transition: all 200ms ease-in-out;
+            //   border-radius: 5px;
 
-              &:hover {
-                background-color: rgba(255, 0, 0, 0.5);
-              }
-            }
+            //   &:hover {
+            //     background-color: rgba(255, 0, 0, 0.5);
+            //   }
+            // }
 
             .saveBtn {
               font-size: 2rem;
