design: design login form

--- a/frontend/src/styles/scss/LoginPage.scss
+++ b/frontend/src/styles/scss/LoginPage.scss
@@ -1,14 +1,14 @@
-$bgc: rgba(214, 201, 228, 30%);
+$bgc: rgba(238, 238, 238, 0.3);
 $shadow: gray;
 $width: 550px;
 $height: 660px;
-$br: 4px;
+$br: 1rem;
 $padding: 40px;
 $tab-font-size: 25px;
 $tab-color: white;
-$tab-bgc-default: rgb(204, 199, 199);
-$tab-bgc-hover: rgba(174, 106, 234, 1);
-$tab-bgc-selected: rgba(175, 106, 234, 0.75);
+$tab-bgc-default: rgb(158, 158, 158);
+$tab-bgc-hover: rgb(211, 211, 211);
+$tab-bgc-selected: rgba(255, 255, 255);
 $height-input-group: 440px;
 $fade-time: 300;
 $before: rgba(255, 0, 0, 50%);
@@ -22,6 +22,7 @@ $after-hover: rgba(0, 255, 0, 70%);
   background-color: #{$bgc};
   width: #{$width};
   height: #{$height};
+  border: 2px solid gray;
   border-radius: #{$br};
   position: absolute;
   top: 50%;
@@ -35,7 +36,18 @@ $after-hover: rgba(0, 255, 0, 70%);
     display: flex;
     color: $tab-color;
     font-size: #{$tab-font-size};
+    border-radius: 0.6rem;;
+    border: 2px solid gray;
 
+    .left{
+      border-top-left-radius: 0.45rem;
+      border-bottom-left-radius: 0.45rem;
+    }
+    .right{
+      border-top-right-radius: 0.45rem;
+      border-bottom-right-radius: 0.45rem;
+    }
+    
     .tab {
       width: 50%;
       height: 100%;
@@ -44,15 +56,19 @@ $after-hover: rgba(0, 255, 0, 70%);
       align-items: center;
       transition: background-color 300ms ease-in-out;
       background-color: #{$tab-bgc-default};
+      color: white;
       cursor: pointer;
 
       &:hover {
         background-color: #{$tab-bgc-hover};
+        color: black;
       }
 
       &-selected {
         @extend .tab;
         background-color: #{$tab-bgc-selected};
+        color:black;
+        font-weight: 700;
       }
     }
   }
@@ -86,8 +102,10 @@ $after-hover: rgba(0, 255, 0, 70%);
       .input-item {
         height: 50px;
         border: 2px solid #{$shadow};
+        border-radius: 0.6rem;
         font-size: 25px;
         outline: none;
+        padding-left: 10px;
 
         &:focus {
           border: 2px solid #{$tab-bgc-hover};
@@ -172,6 +190,8 @@ $after-hover: rgba(0, 255, 0, 70%);
     height: 50px;
     display: flex;
     margin-top: 10px;
+    border: 2px solid gray;
+    border-radius: 0.6rem;
 
     @mixin footer-item($width) {
       width: $width;
@@ -188,17 +208,24 @@ $after-hover: rgba(0, 255, 0, 70%);
     .left {
       @include footer-item($width: 30%);
       background-color: #{$tab-bgc-default};
+      
+      border-top-left-radius: 0.45rem;
+      border-bottom-left-radius: 0.45rem;
+      color: black;
       &:hover {
-        background-color: red;
+        background-color: rgb(158, 158, 158);
       }
     }
 
     .right {
       @include footer-item($width: 70%);
       background-color: #{$tab-bgc-selected};
+      border-top-right-radius: 0.45rem;
+      border-bottom-right-radius: 0.45rem;
+      color:black;
 
       &:hover {
-        background-color: #{$after-hover};
+        background-color: rgb(158, 158, 158);
         color: black;
       }
     }
