--- a/frontend/src/styles/scss/common.scss
+++ b/frontend/src/styles/scss/common.scss
@@ -36,6 +36,7 @@ $hover-bgc: rgb(194, 194, 194);
     color: $btn-color;
     font-weight: 700;
     transition: color 300ms ease-in-out, background-color 300ms ease-in-out;
+    min-width: 100px;
   }
 
   .btn-inactive {
