--- a/frontend/src/styles/scss/MyPage.scss
+++ b/frontend/src/styles/scss/MyPage.scss
@@ -2,7 +2,8 @@
   margin: 40px;
   display: flex;
   flex-direction: column;
-  // justify-content: center;
+  align-items: center;
+  text-align: center;
   .mypage_info{
     margin: 20px;
     display: flex;
@@ -31,16 +32,24 @@
     align-items: center;
     li {
       list-style-type: none;
-      border: 1px solid black;
-      border-top-right-radius: 0.4rem;
-      border-top-left-radius: 0.4rem;
-      padding: 6px;
+      border: none;
+      padding: 8px;
+      margin: 10px;
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: #aaa;
       cursor: pointer;
+      &:hover{
+        color: #777;
+      }
     }
     .selected{
-      font-weight: 700;
-      font-size: 1.1rem;
+      border-bottom: 2px solid black;
+      color: black;
       cursor: default;
+      &:hover {
+        color:black;
+      }
     }
   }
 }
