design: 없어진 페이지 버튼 제거 및 수정

--- a/frontend/src/styles/scss/MainPage.scss
+++ b/frontend/src/styles/scss/MainPage.scss
@@ -239,7 +239,7 @@
 
 .mainButtons {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     margin-right: 0;
 
