fix: 안쓰는 라우트 삭제, 버튼 삭제

--- a/frontend/src/styles/scss/MyPage.scss
+++ b/frontend/src/styles/scss/MyPage.scss
@@ -25,6 +25,15 @@
         font-size: 1.5rem;
       }
     }
+    .update_nick{
+      background-color: #fff;
+      width: 120px;
+      height: 40px;
+      font-size: 1.1rem;
+      font-weight: 700;
+      border: 2px solid gray;
+      border-radius: 0.2rem;
+    }
   }
   .mypage_content {
     margin: 20px;
