--- a/frontend/src/styles/scss/boardPage.scss
+++ b/frontend/src/styles/scss/boardPage.scss
@@ -86,12 +86,17 @@
       align-items: center;
     }
     ul {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       width: 800px;
+      padding: 0;
       li {
         display: flex;
         flex-direction: column;
+        width: 800px;
         padding: 10px;
-        margin: 10px;
+        margin: 10px 0;
         height: 120px;
         list-style-type: none;
         border: 1px solid gray;
