--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -1006,7 +1006,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
               }
 
               .inner-wrapper {
-                height: calc(100% - 43.2px);
+                height: calc(100%);
                 display: flex;
                 flex-direction: column;
 
@@ -1068,7 +1068,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
               }
 
               .inner-wrapper {
-                height: calc(100% - 43.2px);
+                height: calc(100%);
                 display: flex;
                 flex-direction: column;
 
